[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scenes/ProfileSelect/ProfileSelectButton.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/OpenSans/variants/light_24px.tres" type="DynamicFont" id=2]

[node name="ProfileSelectButton" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 172.0
margin_bottom = 70.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 172.0
margin_bottom = 70.0
mouse_filter = 2
custom_constants/margin_right = 0
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 172.0
margin_bottom = 54.0
mouse_filter = 2

[node name="ProfileNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 156.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "UniverseWorld"

[node name="ProfileInfoLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 156.0
margin_bottom = 38.0
mouse_filter = 2
size_flags_vertical = 3
bbcode_enabled = true
